[package]
name = "bounty-program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.18.0"
borsh = "=0.10.3"
thiserror = "1.0.56"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "1.18.0"
solana-sdk = "1.18.0"
tokio = { version = "1.14", features = ["full"] }

[lib]
crate-type = ["cdylib", "lib"] 