[package]
name = "bounty-program"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.17.7"
borsh = "0.10.3"
thiserror = "1.0.50"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
num-derive = "0.3"
num-traits = "0.2"

[dev-dependencies]
solana-program-test = "1.17.7"
solana-sdk = "1.17.7"
chrono = "0.4.31"

[lib]
crate-type = ["cdylib", "lib"] 